Update README instructions.